# VEGA

./: .gitignore  README.md  pyproject.toml
ppo/: _vizdoom.ini  main.py  sb_ppo_basic.py  sb_ppo_basic_test.py  sb_ppo_basic_train.py
q_learning/: main.py
test/: echo.py
vizdoom_bare/: _vizdoom.ini  basic.py  basic_gym.py
